automatic code cleanup + minor changes on service names